example/src/main/webapp/WEB-INF/views/error/503.html.scaml
%h3 503 Service Unavailable
%hr

%p
 Please try later.

